# lightsrv

./: .gitmodules  BCM2835.cc  BCM2835.h  PeriodicTask.cc  PeriodicTask.h  README.md  cert.pem  config.h.in  index.html  key.pem  lightsrv.conf  lightsrv.service  lightsrv.systemd  lightui.html  main.cc  meson.build  patch-for-lightsrv.patch
